# hanzi-to-pinyin

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
aur/: PKGBUILD
config/: config.json.in
source/: hanzi_to_pinyin.cpp  hanzi_to_pinyin.h
source/config/: config.cpp  config.h.in
source/config/db_config/: db_config.cpp
source/hanzi-to-pinyin/: hanzi_to_pinyin.cpp  hanzi_to_pinyin.h
source/hanzi-to-pinyin/config/: config.cpp  config.h.in
source/hanzi-to-pinyin/config/db_config/: db_config.cpp  db_config.h
source/hanzi-to-pinyin/pch/: pch.h
source/hanzi-to-pinyin/pinyin_db/: pinyin_db.cpp  pinyin_db.h
source/pinyin_db/: pinyin_db.cpp  pinyin_db.h
test/: test.cmake  test_case_1.cpp
